removed agentid from contracts and improved analyzeagentperformance